# adventofcode

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
aoc_python/: initialize_aoc_python.py
aoc_python/2024/day_10/: solution.py
aoc_python/2024/day_11/: solution.py
aoc_python/2024/day_12/: solution.py
aoc_python/2024/day_13/: solution.py
aoc_python/2024/day_14/: solution.py
aoc_python/2024/day_15/: solution.py
aoc_python/2024/day_16/: solution.py
aoc_python/2024/day_17/: solution.py
aoc_python/2024/day_18/: solution.py
aoc_python/2024/day_19/: solution.py
aoc_python/2024/day_20/: solution.py
aoc_python/2024/day_21/: solution.py
aoc_python/2024/day_22/: solution.py
aoc_python/2024/day_23/: solution.py
aoc_python/2024/day_24/: solution.py
aoc_python/2024/day_25/: solution.py
aoc_python/2024/day_4/: solution.py
aoc_python/2024/day_5/: solution.py
aoc_python/2024/day_7/: solution.py
aoc_python/2024/day_8/: solution.py
aoc_python/2024/day_9/: solution.py
aoc_python/2025/day_1/: solution.py
aoc_python/2025/day_2/: solution.py
aoc_python/2025/day_3/: solution.py
aoc_python/2025/day_4/: solution.py
aoc_python/2025/day_5/: solution.py
python/: initialize_aoc_python.py
python/2024/day_1/: solution.py
python/2024/day_2/: solution.py
python/2024/day_3/: solution.py
python/2024/day_6/: solution.py
python/2024/day_7/: solution.py
src/adventofcode/: __init__.py  aoc_connect.py  utils.py
